// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/GraphEdge.vue snapshot connected 1`] = `
<g
  class="edge"
  data-type="edge"
  stroke-opacity="1"
>
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#222"
    stroke-width="5"
  />
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="orange"
    stroke-width="4"
  />
  <!--v-if-->
  <!--v-if-->
  <g
    transform="translate(2,20)"
  >
    <g
      fill="#aaa"
      stroke="#333"
    >
      <path
        d="M-6,-8 l6,0 l6,8 l-6,8 l-6,0z"
        stroke-linejoin="round"
      />
    </g>
  </g>
</g>
`;

exports[`src/components/elements/GraphEdge.vue snapshot connecting 1`] = `
<g
  class="edge"
  data-type="edge"
  stroke-opacity="0.5"
>
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#222"
    stroke-width="5"
  />
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="orange"
    stroke-width="4"
  />
  <!--v-if-->
  <g
    transform="translate(1,2)"
  >
    <g
      fill="#aaa"
      stroke="#333"
    >
      <g>
        <path
          d="M-8,-8 l12,0 l0,16 l-12,0 l6,-8z"
          stroke-linejoin="round"
        />
        <!--v-if-->
      </g>
    </g>
  </g>
  <!--v-if-->
</g>
`;

exports[`src/components/elements/GraphEdge.vue snapshot initial 1`] = `
<g
  class="edge"
  data-type="edge"
  stroke-opacity="1"
>
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#222"
    stroke-width="5"
  />
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#888"
    stroke-width="4"
  />
  <path
    class="highlight"
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#888"
    stroke-width="9"
  />
  <!--v-if-->
  <!--v-if-->
</g>
`;
